# inference-onnx-with-trt

./: README.md  train.py
cuda_mnist/: CMakeLists.txt  main.cpp  run_build.sh
cuda_mnist/builds/: CMakeCache.txt  Makefile  cmake_install.cmake
cuda_mnist/include/: engine.h
cuda_mnist/src/: engine.cpp
model/: transformer.py
test/: test.ipynb  test.py  test1.py
tools/: export.py  function.py
weights/: model_scripted.pt  model_state_dict.pth  weight.onnx  weight.pth
